# follower

./: CMakeLists.txt  README.md  package.xml
launch/: lead_follow_node.launch  lead_follow_node.launch~  minimal.launch  minimal.launch~  tracking_follower.launch  tracking_follower.launch~
scripts/: server.py  server.py~
src/: lead_follow_node.cpp  tracking_follower.cpp
